[package]
name = "duno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
poem = { version = "*", features = ["websocket", "static-files"]}
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.17"
tracing = "0.1.35"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }